Update and rename redshift-Copy1.ipynb to ecommercedataset-example.ipynb

--- a/ecommercedataset-example.ipynb
+++ b/ecommercedataset-example.ipynb
@@ -17,7 +17,7 @@
     "* Defining the star schema between the data tables \n",
     "* Loading a set of tables into SNAP ( Indexing Process)\n",
     "* Sample queries on SNAP\n",
-    "NOTE: This example uses a Jupyter notebook but you can use any SQL client such a Squirrel to connext to SNAP and setup."
+    "NOTE: This example uses a Jupyter notebook but you can use any SQL client such as Squirrel to connect to SNAP."
    ]
   },
   {
